# typing-rust-patterns

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  flake.nix  index.html
.github/workflows/: web.yml
src/: analysis.rs  ast.rs  cli.rs  compare.rs  compute_rules.rs  display_rules.rs  explore.rs  lib.rs  main.rs  option_bundles.rs  parser.rs  printer.rs  solver.rs  typing.rs  typing_rules.rs  wasm.rs
src/analyses/: compare.rs  compute_rules.rs  explore.rs  mod.rs
src/analyses/explore/: deepen.rs  subst.rs
src/ast/: mod.rs  parser.rs  printer.rs  types.rs
src/ast/printer/: display_tree.rs
src/rulesets/: bm_based.rs  mod.rs  ty_based.rs
src/solvers/: analysis.rs  bm_based.rs  mod.rs  ty_based.rs  typing_rules.rs
tests/: compare.rs  compute_rules.rs  generate_design_doc.rs  trace_cli.rs  trace_solver.rs
tests/snapshots/: bundle_rules@default-BindingMode.snap  bundle_rules@default-Expression.snap  bundle_rules@default-Plain.snap  bundle_rules@default-Sequent.snap  bundle_rules@default-SequentBindingMode.snap  bundle_rules@eat_outer_2021-Let.snap  bundle_rules@eat_outer_2021-SequentInMemory.snap  bundle_rules@eat_outer_2021-SequentUserVisible.snap  bundle_rules@ergo2024-BindingMode.snap  bundle_rules@ergo2024-Expression.snap  bundle_rules@ergo2024-Plain.snap  bundle_rules@ergo2024-Sequent.snap  bundle_rules@ergo2024-SequentBindingMode.snap  bundle_rules@ergo2024_breaking_only-BindingMode.snap  bundle_rules@ergo2024_breaking_only-Expression.snap  bundle_rules@ergo2024_breaking_only-Plain.snap  bundle_rules@ergo2024_breaking_only-Sequent.snap  bundle_rules@ergo2024_breaking_only-SequentBindingMode.snap  bundle_rules@min_ergonomics-BindingMode.snap  bundle_rules@min_ergonomics-Expression.snap  bundle_rules@min_ergonomics-Let.snap  bundle_rules@min_ergonomics-Sequent.snap  bundle_rules@min_ergonomics-SequentBindingMode.snap  bundle_rules@min_ergonomics-SequentInMemory.snap  bundle_rules@min_ergonomics-SequentUserVisible.snap  bundle_rules@nadri-BindingMode.snap  bundle_rules@nadri-Expression.snap  bundle_rules@nadri-Let.snap  bundle_rules@nadri-Sequent.snap  bundle_rules@nadri-SequentBindingMode.snap  bundle_rules@nadri-SequentInMemory.snap  bundle_rules@nadri-SequentUserVisible.snap  bundle_rules@rfc3627-BindingMode.snap  bundle_rules@rfc3627-Expression.snap  bundle_rules@rfc3627-Let.snap  bundle_rules@rfc3627-Sequent.snap  bundle_rules@rfc3627-SequentBindingMode.snap  bundle_rules@rfc3627-SequentUserVisible.snap  bundle_rules@rfc3627_2021-BindingMode.snap  bundle_rules@rfc3627_2021-Expression.snap  (+1363 more)
web/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
web/src/: editor.ts
web/src/components/: App.jsx  Solver.jsx  SolverOptions.jsx  worker.ts
web/src/interpreter/: index.ts  interpreter.ts  worker.ts
web/src/pages/: index.astro
web/src/solver/: index.ts  worker.ts
