[package]
name = "typing-rust-patterns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
# Custom fork with https://github.com/mikaelmello/inquire/pull/229 rebased
inquire = { git = "https://github.com/Nadrieril/inquire", branch = "history" }
itertools = "0.13.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
similar = "2.6.0"
typed-arena = "2.0.2"

[dev-dependencies]
insta = { version = "1.39.0", features = ["serde"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
