[package]
name = "typing-rust-patterns"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.86"
bumpalo = "3.16.0"
indoc = "2.0.5"
itertools = "0.13.0"
match-ergonomics-formality = { path = "./match-ergonomics-formality" }
nom = "7.1.3"
nom-supreme = "0.8.0"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
assert_cmd = "2.0.16"
colored = "2.1.0"
# Custom fork with https://github.com/mikaelmello/inquire/pull/229 rebased
inquire = { git = "https://github.com/Nadrieril/inquire", branch = "history" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.70", features = ["console"] }

[dev-dependencies]
insta = { version = "1.39.0", features = ["serde"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = true
opt-level = "z"
